cargo-features = ["edition2024"]
[package]
name = "blue-house"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib","cdylib"]
[dependencies]

pinocchio = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio.git" }
bytemuck = { version = "1.23.0", features = ["derive"] }
arrayvec = "0.7.6"
arrayref = "0.3.9"
